--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -6,31 +6,40 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/shoping.css" />
 </head>
 
-<body>
+<body id="signup">
     <% include ../includes/shopnav.ejs %>
 
         <main>
-            <% if (errorMessage) { %>
-                <div class="user-message user-message--error">
-                    <%= errorMessage %>
-                </div>
-                <% } %>
-                    <form class="login-form" action="/signup" method="POST" novalidate>
-                        <div class="form-control">
-                            <label for="email">E-Mail</label>
-                            <input class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>" type="email" name="email" id="email" value="<%= oldInput.email %>">
+            <div class="myform-container-page">
+                <div class="myForm">
+                    <form action="/signup" method="POST" novalidate>
+                        <div>
+                            <label for="email">Email</label>
+                            <input class="form-control" class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>" type="email" name="email" id="email" value="<%= oldInput.email %>">
                         </div>
-                        <div class="form-control">
+                        <br>
+                        <div>
                             <label for="password">Password</label>
-                            <input class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>" type="password" name="password" id="password" value="<%= oldInput.password %>">
+                            <input class="form-control" class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>" type="password" name="password" id="password" value="<%= oldInput.password %>">
                         </div>
-                        <div class="form-control">
+                        <br>
+                        <div>
                             <label for="confirmPassword">Confirm Password</label>
-                            <input class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>" type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
+                            <input class="form-control" class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>" type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
                         </div>
+                        <br>
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button class="btn" type="submit">Signup</button>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Signup</button>
+                            <% if (errorMessage) { %>
+                                <span class="error-message">
+                            <%= errorMessage %>
+                        </span>
+                                <% } %>
+                        </div>
                     </form>
+                </div>
+            </div>
         </main>
 </body>
 
