--- a/views/includes/shopnav.ejs
+++ b/views/includes/shopnav.ejs
@@ -1,35 +1,34 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <ul class="nav navbar-nav">
-        <li class="nav-item">
-            <a href="/">Shop</a>
-        </li>
-        <% if (isAuthenticated) { %>
-            <li class="nav-item">
-                <a href="/cart">Cart</a>
-            </li>
-            <li class="nav-item">
-                <a href="/add-product">Add Product</a>
-            </li>
-            <li class="nav-item">
-                <a href="/edit-products">Admin Product</a>
-            </li>
-            <% } %>
-    </ul>
-    <ul class="nav navbar-nav">
-        <% if (!isAuthenticated) { %>
-            <li class="nav-item">
-                <a href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a href="/signup">Signup</a>
-            </li>
-            <% } else { %>
-                <li class="nav-item">
-                    <form action="/logout" method="post">
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button type="submit" class="btn btn-outline-secondary">Logout</button>
-                    </form>
-                </li>
-                <% } %>
-    </ul>
+<nav class="navbar navbar-inverse" id="nav-bar-shopping">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+            <span class="navbar-brand" href="\"><img src="images/logo.png" style="height: 150px; margin-top: -65px;"></span>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="/" class=<%=( path=="shop" ) ? 'selected' : '' %>>Shop</a></li>
+                <% if (isAuthenticated) { %>
+                    <li><a href="/cart" class=<%=( path=="cart" ) ? 'selected' : '' %>>Cart</a></li>
+                    <% } %>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <% if (isAuthenticated) { %>
+                    <li><a href="/add-product" class=<%=( path=="add-product" ) ? 'selected' : '' %>>Add Product</a></li>
+                    <li><a href="/edit-products" class=<%=( path=="edit-products" ) ? 'selected' : '' %>>Admin Product</a></li>
+                    <% } %>
+                        <% if (!isAuthenticated) { %>
+                            <li><a href="/login" class=<%=( path=="login" ) ? 'selected' : '' %>><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                            <li><a href="/signup" class=<%=( path=="signup" ) ? 'selected' : '' %>><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                            <% } else { %>
+                                <li class="nav-item">
+                                    <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                                </li>
+                                <% } %>
+            </ul>
+        </div>
+    </div>
 </nav>
