--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -12,6 +12,8 @@
         <main>
             <div class="myform-container-page">
                 <div class="myForm">
+                    <h2>Please Singup</h2>
+                    <hr>
                     <form action="/signup" method="POST" novalidate>
                         <div>
                             <label for="email">Email</label>
@@ -42,5 +44,6 @@
             </div>
         </main>
 </body>
+
 
 </html>
