--- a/public/stylesheets/shoping.css
+++ b/public/stylesheets/shoping.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .card-img-top {
     width: 200px;
     height: 180px;
@@ -96,6 +97,12 @@
     padding-top: 120px;
     height: 100%;
     width: 100%;
+}
+
+.myForm h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    font-weight: bolder;
 }
 
 #signup {
