--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -9,19 +9,22 @@
 <body>
     <% include ../includes/shopnav.ejs %>
         <main>
-            <% if (errorMessage) { %>
-                <div class="user-message user-message--error">
-                    <%= errorMessage %>
-                </div>
-                <% } %>
-                    <form class="login-form" action="/reset" method="POST">
-                        <div class="form-control">
-                            <label for="email">E-Mail</label>
-                            <input type="email" name="email" id="email">
-                        </div>
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button class="btn" type="submit">Reset Password</button>
-                    </form>
+            <div style="padding-top: 100px;">
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error">
+                        <%= errorMessage %>
+                    </div>
+                    <% } %>
+                        <form class="login-form" action="/reset" method="POST">
+                            <div class="form-control">
+                                <label for="email">E-Mail</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <button class="btn" type="submit">Reset Password</button>
+                        </form>
+            </div>
+
         </main>
 </body>
 
