Shopping Page Done!

--- a/public/stylesheets/shoping.css
+++ b/public/stylesheets/shoping.css
@@ -3,6 +3,7 @@
 .card-img-top {
     width: 200px;
     height: 180px;
+    border-radius: 5px;
 }
 
 .card p {
@@ -12,6 +13,10 @@
 .items-display {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #ffffff;
+    padding: 50px 80px 80px;
+    border-radius: 10px;
 }
 
 .two-buttons {
@@ -110,4 +115,24 @@
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
+}
+
+#shopping {
+    padding: 75px
+}
+
+#shopping h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bolder;
+    text-align: center;
+}
+
+#shopping hr {
+    height: 3px;
+    background-color: #ffffff;
+    border-radius: 30%;
+}
+
+#shopping-body {
+    background-color: #F6F6F8;
 }
